fixed empty gap on the header

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,7 @@ html {
 }
 
 #header {
+	top: 0;
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -137,7 +138,7 @@ nav {
 footer {
 	background: #454f4e;
 	text-align: end;
-	padding: 5px 2.5px;
+	padding: 5px 25px;
 	color: white;
 }
 
